--- a/styles.css
+++ b/styles.css
@@ -1,80 +1,59 @@
-body{
+* {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    box-sizing: border-box;
+    background-color:lightgreen; 
+    font-family:brush script; 
+    outline: none;
 }
-.background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('food.jpeg');
-    background-size: cover;
-    z-index: -1;
-}
-.header {
-    background: linear-gradient(to right, #333, #555);
-    color: white;
-    box-shadow: 0 2px 4px rgba(119, 29, 29, 0.1);
-    text-align: center;
-}
-.header a {
-    color: white;
-    text-decoration: none;
-    padding: 10px 20px;
-}
-.header a:hover {
-    color: grey;
-}
-.content {
-    padding: 20px;
-    text-align: center;
-    color: #333;
-}
-.food-info {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin-top: 20px;
-}
-.food-info .BIRIYANI,
-.food-info .PAROTTA {
-    text-align:pink;
-    width: 45%;
-    background-color:grey;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
-    padding: 20px;
-    border: 1px solid #ddd;
-    transition: transform 0.3s ease;
-}
-.food-info .BIRIYANI:hover,
-.food-info .PAROTTA:hover {
-    transform: scale(1.05);
-}
-.food-info img {
-    max-width: 100%;
-    border-radius: 10px;
-    position: relative;
-}
-.stay-connected-inner {
+.container {
+    height: 100vh;
     display: flex;
     justify-content: center;
-    list-style: none;
-    padding: 0;
+    align-items: center;
 }
-.stay-connected-inner li {
-    margin: 0 10px;
+.calculator {
+    background-color:black;
+    padding: 16px;
+    border-radius: 32px;
+    box-shadow: inset 6px 6px 14px blue, 6px 6px 14px blue(0, 0, 0, 0.14px);
+    display: grid;
+    grid-template-columns: repeat(4, 68px);
+}
+input {
+    grid-column: span 4;
+    height: 70px;
+    width: 260px;
+    background-color: white;
+    box-shadow: inset -6px -6px 14px blue, inset 6px 6px 14px blue(0, 0, 0, 0.16);
+    border: none;
+    border-radius: 30px;
+    color: rgb(70, 70, 70);
+    font-size: 45px;
+    text-align: end;
+    margin: auto;
+    margin-top: 40px;
+    margin-bottom: 30px;
+    padding: 20px;
+}
+button {
+    height: 48px;
+    width: 48px;
+    background-color:pink;
+    box-shadow: -6px -6px 14px blue, 6px 6px 15px blue(0, 0, 0, 0.16);
+    border: none;
+    border-radius: 50%;
+    margin: 8px;
+    font-size: 16px;
+}
+.equal {
+    width: 48px;
+    border-radius: 20px;
+    background-color: pink;
+    box-shadow: -6px -6px 14px blue, 6px 6px 15px blue(0, 0, 0, 0.16);
+    border: none;
+    border-radius: 50%;
+    margin: 8px;
+    font-size: 16px;
 }
 
-.stay-connected-inner li a {
-    color: grey;
-    text-decoration: none;
-    transition: color 0.3s ease;
-}
-
-.stay-connected-inner li a:hover {
-    color: #ff6600;
-}
